maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:13: error: reassignment to val
    murs=0
        ^IslandMaze:17: error: value += is not a member of Int
      murs+=1
          ^IslandMaze:20: error: value += is not a member of Int
        murs+=1
            ^IslandMaze:23: error: value += is not a member of Int
          murs+=1
              ^