maze.island.IslandMaze.scala.code
override def run() {
  def murs=3
  
  def keepHandOnSideWall(){
    gauche()
    while(estFaceMur){
      droite()
    }
    avance()
      }
	while(murs<3){
    murs=0
    if(!estFaceMur){
      avance()
    }else{
      murs+=1
      droite()
      if(estFaceMur){
        murs+=1
        retourne()
        if(estFaceMur){
          murs+=1
        }
      }
    }
    
  }
  
    
  while(!estSurBiscuit){
    keepHandOnSideWall()
  }
  prendBiscuit()
  }